--- a/slides/html/2-data_wrangling.slides.html
+++ b/slides/html/2-data_wrangling.slides.html
@@ -22673,7 +22673,18 @@ z
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Solutions">Solutions<a class="anchor-link" href="#Solutions">&#182;</a></h3><h5 id="1.-Read-in-the-meteorite-data-from-the-Meteorite_Landings.csv-file:">1. Read in the meteorite data from the <code>Meteorite_Landings.csv</code> file:<a class="anchor-link" href="#1.-Read-in-the-meteorite-data-from-the-Meteorite_Landings.csv-file:">&#182;</a></h5>
+<h3 id="Solutions">Solutions<a class="anchor-link" href="#Solutions">&#182;</a></h3>
+</div>
+</div>
+</div>
+</div></section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h5 id="1.-Read-in-the-meteorite-data-from-the-Meteorite_Landings.csv-file:">1. Read in the meteorite data from the <code>Meteorite_Landings.csv</code> file:<a class="anchor-link" href="#1.-Read-in-the-meteorite-data-from-the-Meteorite_Landings.csv-file:">&#182;</a></h5>
 </div>
 </div>
 </div>
@@ -22693,7 +22704,7 @@ z
 </div>
 </div>
 
-</div><div class="fragment">
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -22826,7 +22837,7 @@ z
 
 </div>
 
-</div></div></section><section>
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
