--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -44306,9 +44306,9 @@ require(
             plugins: [RevealNotes],
             keyboard: {
                 // map numpad numbers to their top row equivalents
-                97: () => Reveal.triggerKey(49), // 1
-                98: () => Reveal.triggerKey(50), // 2
-                99: () => Reveal.triggerKey(51), // 3
+                97 : () => Reveal.triggerKey(49), // 1
+                98 : () => Reveal.triggerKey(50), // 2
+                99 : () => Reveal.triggerKey(51), // 3
                 100: () => Reveal.triggerKey(52), // 4
             }
         });
@@ -44329,14 +44329,20 @@ require(
 
         // jump to slide prompt
         Reveal.addKeyBinding(
-            { keyCode: 71, key: "G", description: "Go to slide number" },
+            { keyCode: 71, key: "G", description: "Go to slide" },
             () => {
                 const slides = Reveal.getSlides();
-                const input = prompt("Go to slide number");
-                if (input !== undefined && input !== "" && input !== null && !isNaN(input)) {
-                    const requestedSlideNumber = Math.max(Math.min(input, slides.length) - 1, 0);
-                    const slideIndices = Reveal.getIndices(slides[requestedSlideNumber]);
-                    Reveal.slide(slideIndices.h, slideIndices.v, 100); // set fragment to large number to ensure the full slide is displayed
+                const input = prompt("Go to slide");
+                if (input !== undefined && input !== "" && input !== null){
+                    if (!isNaN(input)) {
+                      const requestedSlideNumber = Math.max(Math.min(input, slides.length) - 1, 0);
+                      const slideIndices = Reveal.getIndices(slides[requestedSlideNumber]);
+                      Reveal.slide(slideIndices.h, slideIndices.v, 100); // set fragment to large number to ensure the full slide is displayed
+                    }
+                    else if (typeof input === "string" || input instanceof String) {
+                        const slideName = input.replace(' ', '-');
+                        if (namedSlides.includes(slideName)) window.location = `#/${slideName}`;
+                    }
                 }
             }
         );
@@ -44350,9 +44356,9 @@ require(
         Reveal.addEventListener('slidechanged', update);
 
         function setScrollingSlide() {
-            let scale = 100;
-            let h = $('.reveal').height() * scale / 100;
-            let slide = $('section.present').find('section')
+            const scale = 100;
+            const h = $('.reveal').height() * scale / 100;
+            const slide = $('section.present').find('section')
               .filter(function() {
                 return $(this).height() > h;
               })
@@ -44390,10 +44396,13 @@ require(
         Reveal.addEventListener('slidechanged', setScrollingSlide);
 
         // create links to any tagged cells
+        const namedSlides = [];
         $('[class*="celltag_"]').each((index, element) => {
             const tag = $(element).attr('class').split(' ').filter(x => x.includes('celltag_'))[0];
             const [ attr, value ] = tag.replace('celltag_', '').split('_');
             $(`.${tag}`).parentsUntil('section').last().parent().attr(attr, value);
+
+            if (attr === "id") namedSlides.push(value);
         })
 
         // add keybindings for section shortcuts (cells must be tagged)
