--- a/slides/html/0-introduction.slides.html
+++ b/slides/html/0-introduction.slides.html
@@ -14689,7 +14689,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_intro" data-mime-type="text/markdown">
 <h1 id="Introduction-to-Data-Analysis-Using-Pandas">Introduction to Data Analysis Using Pandas<a class="anchor-link" href="#Introduction-to-Data-Analysis-Using-Pandas">&#182;</a></h1><h3 id="Stefanie-Molin">Stefanie Molin<a class="anchor-link" href="#Stefanie-Molin">&#182;</a></h3>
 </div>
 </div>
@@ -14700,7 +14700,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_bio" data-mime-type="text/markdown">
 <h2 id="Bio">Bio<a class="anchor-link" href="#Bio">&#182;</a></h2><ul>
 <li>Software engineer and data scientist at Bloomberg in New York City</li>
 <li>Working in information security</li>
@@ -14718,7 +14718,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_prerequisites" data-mime-type="text/markdown">
 <h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab">this</a> Binder environment.</p>
 
 </div>
@@ -14730,7 +14730,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_session-outline" data-mime-type="text/markdown">
 <h3 id="Session-Outline">Session Outline<a class="anchor-link" href="#Session-Outline">&#182;</a></h3><ol>
 <li>Getting Started With Pandas</li>
 <li>Data Wrangling</li>
@@ -14747,7 +14747,7 @@ div.jp-OutputPrompt {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_follow-along" data-mime-type="text/markdown">
 <h2 id="Let's-get-started">Let's get started<a class="anchor-link" href="#Let's-get-started">&#182;</a></h2><p><em>Be sure to follow along in the <a href="https://github.com/stefmolin/pandas-workshop/tree/main/notebooks">notebooks</a>.</em></p>
 <p><img width="30%" src="https://www.pngkey.com/png/detail/42-428839_silhouette-face-bamboo-cartoon-wild-bear-cute-panda.png" alt="Silhouette, Face, Bamboo, Cartoon, Wild, Bear, Cute - Panda Black And White@pngkey.com" style="min-width: 300px"></p>
 
